# Auth_sprint_1

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.dev.yml  docker-compose.test.yml  docker-compose.yml  index.html  pyproject.toml  setup.cfg  sitemap.xml
.envs/development/: .env.template
.envs/production/: .env.template
.github/workflows/: build-docs.yml  lint.yml  tests-with-docker.yml
development-env/init/: index.html
development-env/pre-commit-hooks/: index.html
development/conventional-commits/: index.html
development/ide/: index.html
development/intro/: index.html
development/lint/: index.html
development/migrations/: index.html
development/requirements/: index.html
docker/app/: Dockerfile
docker/app/scripts/: entrypoint.sh  start.sh
docker/jaeger/: Dockerfile
docker/movies_auth/: Dockerfile
docker/movies_auth/nginx/: nginx.conf
docker/movies_auth/nginx/templates/: site.conf.template
docker/movies_auth/scripts/: entrypoint.sh  start.sh
docker/postgres/: Dockerfile
docker/redis/: Dockerfile
docker/tests/: Dockerfile
docker/tests/scripts/: entrypoint.sh  wait-dependencies.sh
docs/ru/: mkdocs.yml
docs/ru/docs/: index.md
docs/ru/docs/development/: conventional-commits.md  ide.md  lint.md  migrations.md
docs/ru/docs/launching/: docker.md  envs.md  launch.md  local.md  tests.md
docs/ru/docs/oauth2/: developers.md  intro.md
git/git-flow/: index.html
launching/docker/: index.html
launching/envs/: index.html
launching/launch/: index.html
launching/local/: index.html
launching/tests/: index.html
oauth2/clients/: index.html
oauth2/developers/: index.html
oauth2/intro/: index.html
src/: config.py  manage.py  wsgi.py
src/app/: __init__.py  cli.py  crypto.py  decorators.py  encoding.py  hashers.py  jaeger.py  models.py  oauth2.py  pagination.py  serializer.py  swagger.py  utils.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py
src/app/api/v1/auth/: __init__.py  routes.py
src/app/api/v1/oauth/: __init__.py  (+1 more)
src/app/auth/: routes.py
src/app/auth/docs/: logout.yml  refresh.yml  signup.yml
src/app/contrib/: __init__.py
src/app/db/: redis.py
src/app/oauth2/: __init__.py  base.py  enums.py  utils.py
src/app/permissions/: __init__.py  routes.py
src/app/permissions/docs/: permission_detail_delete.yml  permission_detail_get.yml  permission_detail_patch.yml  permissions_get.yml  permissions_post.yml
src/app/users/: routes.py
src/app/users/docs/: change_password.yml  has_perms_post.yml  users_permissions_delete.yml  users_permissions_put.yml
src/migrations/: env.py
src/migrations/versions/: 14c1145e15eb_add_model_permission.py  368342ed07fa_add_model_user.py  6571c55d82fe_add_model_entryrecord.py  8d1b2ecedaf9_initial.py  a359bce81fd1_add_is_superuser_to_user_model.py  b2705448171a_delete_cascade_permissions_to_user.py  c60f12c3e034_add_socialaccount.py  e61f4c465b95_add_model_entryrecord.py  ea81dd7d93c4_post_partitioning_entryrecord.py  f3773720bca4_partitioning_entryrecord.py  f98cdd7fa1ad_update.py
src/movies_auth/: main.py  wsgi.py
src/movies_auth/app/: __init__.py  cli.py  error_handlers.py  models.py  settings.py
src/movies_auth/app/api/: __init__.py
src/movies_auth/app/common/: decorators.py  enums.py  exceptions.py  module_loading.py  pagination.py  serializer.py  utils.py
src/movies_auth/app/contrib/: __init__.py  jaeger.py  limiter.py  orjson.py  swagger.py
src/movies_auth/app/db/: pg.py  redis.py
src/movies_auth/app/middleware/: request_id.py
src/movies_auth/app/oauth2/: __init__.py  base.py  utils.py
src/movies_auth/app/secure/: crypto.py  hashers.py
src/movies_auth/app/services/: permissions.py  users.py
src/movies_auth/migrations/: env.py
src/movies_auth/migrations/versions/: 8d1b2ecedaf9_initial.py
src/nginx/templates/: site.conf.template
src/tests/: conftest.py
src/tests/functional/src/: test_auth.py  test_permissions.py  test_users.py
src/tests/functional/testdata/: data_generators.py
src/tests/unit/: test_models.py
tests/: conftest.py
tests/custom_faker/: __init__.py
tests/custom_faker/providers/: __init__.py  permission.py  user.py
tests/fixtures/: fake_db.py  test_app.py  test_client.py  users.py
tests/functional/: settings.py
tests/functional/src/auth/: test_logout.py  test_refresh.py  test_signin.py  test_signup.py
tests/functional/src/users/: test_access_log.py  test_change_password.py
tests/unit/: test_models.py
tests/utils/: api_client.py  db.py  helpers.py  url.py
(+26 files in other folders)
