[tool.poetry]
name = "Movies-auth"
version = "0.1.0"
description = "Auth service for movies"
authors = ["Denis <xczdenis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.4"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^3.1.0"
Flask-JWT-Extended = "^4.4.4"
redis = "^4.3.4"
flasgger = "^0.9.5"
gevent = "^22.10.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
flake8-broken-line = "^0.6.0"
flake8-quotes = "^3.3.1"
pep8-naming = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"



[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
Faker = "^15.1.1"
multidict = "^6.0.2"

[tool.black]
line-length = 100


[tool.pytest.ini_options]
pythonpath = ["src", "app"]
addopts = "-v -p no:warnings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
