[tool.poetry]
name = "Movies-auth"
version = "0.1.0"
description = "Auth service for movies"
authors = ["Denis <xczdenis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^3.1.0"
Flask-JWT-Extended = "^4.4.4"
redis = "^4.3.4"
flasgger = "^0.9.5"
gevent = "^22.10.1"
pydantic = "^1.10.2"
opentelemetry-api = "^1.13.0"
opentelemetry-sdk = "^1.13.0"
opentelemetry-instrumentation-flask = "^0.34b0"
opentelemetry-exporter-jaeger = "^1.13.0"
Authlib = "^1.1.0"
Flask-Limiter = {extras = ["redis"], version = "^2.7.0"}
psycopg2-binary = "^2.9.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
flake8-broken-line = "^0.6.0"
flake8-quotes = "^3.3.1"
pep8-naming = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"



[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
Faker = "^15.1.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.8"
pymdown-extensions = "^9.7"
mkdocs-glightbox = "^0.3.0"

[tool.black]
line-length = 100


[tool.isort]
line_length = 88
multi_line_output = 3
default_section = "THIRDPARTY"
skip = "venv/"
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


[tool.pytest.ini_options]
pythonpath = ["src", "app"]
addopts = "-v -p no:warnings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
